--- a/static/sass/_small.scss
+++ b/static/sass/_small.scss
@@ -6,6 +6,14 @@
 
 @media(min-width: 375px) {
 
+    /*NAVIGATION*/
+    .nav-mobile-items {
+        .nav-mobile-item {
+            font-size: 2rem;
+        }
+    }
+
+
     /*HEADER*/
     .header {
 
